# quiply-backend

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SCRATCH.md  pyproject.toml  settings.yaml  startup.py
data/automation/: auto_user_templates.yaml  personality_archetypes.yaml
data/prompting/alternatives/: base_v1.yaml  (+2 more)
firestore/: __init__.py
src/: async_object.py
src/automation/: __init__.py  base.py  run.py
src/exceptions/: __init__.py  base.py  scenario.py  websocket.py
src/fastapi_app/: __init__.py  main.py
src/framework/: __init__.py
src/models/: __init__.py  analysis.py  base.py  instances.py  messages.py  results.py  scenario.py  user-old.py  voice.py
src/scenario/: __init__.py  agent.py  manager.py
src/services/: __init__.py  base_service.py  main.py
src/settings/: __init__.py  debug.py  evaluation.py  fastapi.py  logging.py  scenario.py  services.py  websocket.py
src/utils/: __init__.py  enum.py  files.py  logging.py  string_manipulation.py
src/websocket/: __init__.py  connection.py  error_handler.py
test/: conftest.py  test_generic.py
test/fixtures/: __init__.py  base_fixtures.py  configs_fixtures.py  instances_fixtures.py  templates_fixtures.py
test/framework/: test_utils.py
test/scenario/: conftest.py
test/websocket/: test_connection.py
tools/: __init__.py  base_tool.py
tools/app_package/: constants.py  models.py  tool.py  utils.py
tools/app_package_old/: __init__.py  constants.py  models.py  tool.py  utils.py
tools/convert_file/: tool.py
tools/create_characters/: __init__.py  constants.py  tool.py
tools/create_user/: __init__.py  tool.py
tools/download_transformer_models/: __init__.py  tool.py
tools/evaluate/: __init__.py  tool.py
tools/find_refs/: __init__.py
tools/purge/: __init__.py  models.py  tool.py
transformer_models/: model_list.txt
(+293 files in other folders)
