[project]
name = "quiply-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "akauper", email = "akauper@gmail.com"}
]
readme = "README.md"
requires-python = ">3.10,<3.12"
dependencies = [
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "fastapi==0.110.1",
    "pyhumps>=3.8.0,<4.0.0",
    "sentry-sdk>=1.36.0,<2.0.0",
    "firebase-admin>=6.3.0,<7.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "openai>=1.10.0,<2.0.0",
    "flake8-for-pycharm>=0.4.1,<0.5.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "guidance>=0.1.10,<0.2.0",
    "events>=0.5,<0.6",
    "pypdf>=4.1.0,<5.0.0",
    "qdrant-client>=1.6.9,<2.0.0",
    "pymilvus>=2.3.3,<3.0.0",
    "objgraph>=3.6.0,<4.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "google-generativeai>=0.4.1,<0.5.0",
    "pillow>=10.1.0,<11.0.0",
    "google-cloud-aiplatform>=1.39.0,<2.0.0",
    "elevenlabs>=1.0.4,<2.0.0",
    "torch>=2.1.2,<3.0.0",
    "torchvision>=0.16.2,<0.17.0",
    "torchaudio>=2.1.2,<3.0.0",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "pyannote-audio>=3.1.1,<4.0.0",
    "ffmpeg-python>=0.2.0,<0.3.0",
    "jinja2>=3.1.3,<4.0.0",
    "numpy>=1.26.4,<2.0.0",
    "anthropic>=0.34.2,<0.35.0",
    "devtools>=0.12.2,<0.13.0",
]

[project.optional-dependencies]
dev = [
    "faker>=22.2.0,<23.0.0",
    "faker-education>=1.2.1,<2.0.0",
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.3,<0.24.0",
    "optimum[onnxruntime]>=1.16.1,<2.0.0",
    "colorama>=0.4.6,<0.5.0",
    "pydeps>=1.12.18,<2.0.0",
    "ruff>=0.3.4,<0.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
ignore = ["F403", "F405"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"